--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15",
     "supertest": "^6.2.1"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
