--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "mocha ./test/* --exit",
     "start": "node index.js",
-    "dev": "nodemon index.js"
+    "dev": "nodemon index.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build"
   },
   "author": "",
   "license": "ISC",
@@ -16,6 +17,12 @@
     "supertest": "^6.2.1"
   },
   "dependencies": {
-    "express": "^4.17.2"
+    "axios": "^0.25.0",
+    "body-parser": "^1.19.1",
+    "config": "^3.3.7",
+    "create-react-app": "^5.0.0",
+    "express": "^4.17.2",
+    "mongoose": "^6.1.7",
+    "react-router-dom": "^5.3.0"
   }
 }
