Updates to add lambda functions and api gateway

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -1,5 +1,10 @@
-service:
-  name: serverless-beasties-app
+service: serverless-beasties-app
+
+plugins:
+  - serverless-webpack
+  - serverless-iam-roles-per-function
+  - serverless-reqvalidator-plugin
+  - serverless-aws-documentation
 
 package:
   individually: true
@@ -19,6 +24,40 @@ provider:
   tracing:
     lambda: true
     apiGateway: true
+
+custom:
+  topicName: beasties-${self:provider.stage}
+  documentation:
+    api:
+      info:
+        version: v1.0.0
+        title: Beasties API
+        description: API for Beasties application
+    models:
+      - name: CreateUserAPIRequest
+        contentType: application/json
+        schema: ${file(models/create-user.json)}
+
+functions:
+  
+  CreateUser:
+    handler: src/lambda/http/createUser.handler
+    events:
+      - http:
+          method: post
+          path: user
+          cors: true
+          reqValidatorName: RequestBodyValidator
+          documentation:
+            summary: Create a new user
+            description: Create a regular user or shelter user
+            requestModels:
+              'application/json': CreateUserAPIRequest
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:PutItem
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USER_TABLE}
 
 resources:
   Resources:
@@ -86,3 +125,25 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
+
+    #Request body validator
+    RequestBodyValidator:
+      Type: AWS::ApiGateway::RequestValidator
+      Properties:
+        Name: 'request-body-validator'
+        RestApiId:
+          Ref: ApiGatewayRestApi
+        ValidateRequestBody: true
+        ValidateRequestParameters: false
+      
+    #Api gateway Response Default 4xx
+    GatewayResponseDefault4XX:
+      Type: AWS::ApiGateway::GatewayResponse
+      Properties:
+        ResponseParameters:
+          gatewayresponse.header.Access-Control-Allow-Origin: "'*'"
+          gatewayresponse.header.Access-Control-Allow-Headers: "'Content-Type,X-Amz-Date,Authorization,X-Api-Key,X-Amz-Security-Token'"
+          gatewayresponse.header.Access-Control-Allow-Methods: "'GET,OPTIONS,POST'"
+        ResponseType: DEFAULT_4XX
+        RestApiId:
+          Ref: ApiGatewayRestApi
