--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react-loader-spinner": "^5.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
