--- a/client/package.json
+++ b/client/package.json
@@ -43,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "superagent": "^7.1.1"
   }
 }
