--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
     "react-loader-spinner": "^5.1.0",
+    "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
