--- a/client/package.json
+++ b/client/package.json
@@ -9,10 +9,12 @@
     "amazon-cognito-identity-js": "^5.2.4",
     "axios": "^0.24.0",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.1.1",
     "react-bootstrap-icons": "^1.7.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-loader-spinner": "^5.1.0",
     "react-promise-tracker": "^2.1.0",
     "react-router-dom": "^6.2.1",
