spelling change in path

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -100,7 +100,7 @@ functions:
     events:
       - http:
           method: get
-          path: animals/{animalName}/{shelterName}
+          path: animal/{animalName}/{shelterName}
           cors: true
     iamRoleStatements:
       - Effect: Allow
