--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,10 @@
     "version": "1.0.0",
     "description": "Beasties Application",
     "dependencies": {
+        "@aws-sdk/client-api-gateway": "^3.52.0",
         "@types/axios": "^0.14.0",
         "@types/http-errors": "^1.6.1",
+        "aws-api-gateway-client": "^0.3.7",
         "aws-xray-sdk": "^2.2.0",
         "axios": "^0.19.0",
         "http-errors": "^1.7.2",
