all get routes for requests

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -139,6 +139,66 @@ functions:
           - dynamodb:GetItem
           - dynamodb:Query
         Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.ANIMAL_TABLE}
+  
+  GetAllRequestsForUser:
+    handler: src/lambda/http/getAllRequestsForUser.handler
+    events:
+      - http:
+          method: get
+          path: request/{userName}
+          cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem
+          - dynamodb:Scan
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USER_ANIMAL_REQUESTS_TABLE}
+
+  GetRequestsForUser:
+    handler: src/lambda/http/getRequestsForUser.handler
+    events:
+      - http:
+          method: get
+          path: request/{userName}/{requestStatus}
+          cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem
+          - dynamodb:Scan
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/${self:provider.environment.USER_ANIMAL_REQUESTS_TABLE}
+
+  GetPendingReqForShelter:
+    handler: src/lambda/http/getPendingReqForShelter.handler
+    events:
+      - http:
+          method: get
+          path: requestsForShelterOwner/{shelterName}
+          cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem
+          - dynamodb:Scan
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/*
+
+  GetRequestsForPet:
+    handler: src/lambda/http/getRequestsForPet.handler
+    events:
+      - http:
+          method: get
+          path: requestsForPet/{animalName}/{shelterName}/{requestStatus}
+          cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - dynamodb:GetItem
+          - dynamodb:Scan
+          - dynamodb:Query
+        Resource: arn:aws:dynamodb:${self:provider.region}:*:table/*
 
 resources:
   Resources:
