image routes for user and animal avatar

--- a/backend/serverless.yml
+++ b/backend/serverless.yml
@@ -20,6 +20,8 @@ provider:
     USER_TABLE: Beasties-user-${self:provider.stage}
     ANIMAL_TABLE: Beasties-animal-${self:provider.stage}
     USER_ANIMAL_REQUESTS_TABLE: Beasties-request-${self:provider.stage}
+    IMAGES_S3_BUCKET: beasties-s3-images-${self:provider.stage}
+    SIGNED_URL_EXPIRATION: 300
   
   tracing:
     lambda: true
@@ -52,6 +54,10 @@ custom:
       - name: UpdateAnimal
         contentType: application/json
         schema: ${file(models/update-animal.json)}
+  splitStacks:
+    perFunction: false
+    perType: true
+    perGroupFunction: false
 
 functions:
   
@@ -401,6 +407,24 @@ functions:
         Action:
           - execute-api:Invoke
         Resource: arn:aws:execute-api:*:*:*
+  
+  GenerateUploadUrl:
+    handler: src/lambda/http/generateUploadUrl.handler
+    events:
+      - http:
+          method: post
+          path: images/user/{imageKey}
+          cors: true
+      - http:
+          method: post
+          path: images/animal/{imageKey}
+          cors: true
+    iamRoleStatements:
+      - Effect: Allow
+        Action:
+          - s3:PutObject
+          - s3:GetObject
+        Resource: arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*
 
 resources:
   Resources:
@@ -472,6 +496,42 @@ resources:
             Projection:
               ProjectionType: ALL
         BillingMode: PAY_PER_REQUEST
+
+    #Images-Bucket
+    AttachmentsBucket:
+      Type: AWS::S3::Bucket
+      Properties:
+        BucketName: ${self:provider.environment.IMAGES_S3_BUCKET}
+        CorsConfiguration:
+          CorsRules:
+            -
+              AllowedOrigins:
+                - '*'
+              AllowedHeaders:
+                - '*'
+              AllowedMethods:
+                - GET
+                - PUT
+                - POST
+                - DELETE
+                - HEAD
+              MaxAge: 3000
+
+    BucketPolicy:
+      Type: AWS::S3::BucketPolicy
+      Properties:
+        PolicyDocument:
+          Id: MyPolicy
+          Version: "2012-10-17"
+          Statement:
+            - Sid: PublicReadForGetBucketObjects
+              Effect: Allow
+              Principal: '*'
+              Action: 
+                - 's3:GetObject'
+                - 's3:PutObject'
+              Resource: 'arn:aws:s3:::${self:provider.environment.IMAGES_S3_BUCKET}/*'
+        Bucket: !Ref AttachmentsBucket
 
     #Request body validator
     RequestBodyValidator:
